# opengl-learn-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: Config.cmake  Definitions.cmake  ExternalsUtils.cmake  GlobalConfig.cmake  Globals.cmake  Options.cmake  SymlinkContent.cmake  Utils.cmake
cmake/dependencies/: SDL3.cmake  fmt.cmake  glad.cmake  glm.cmake  imgui.cmake  physfs.cmake  spdlog.cmake  stb_image.cmake  tracy.cmake
include/core/: event_handler.h  numeric_types.h  renderer.h  shader.h  shader.hpp  timing.h  window.h
include/core/utils/: assertions.h  backports.h  helper_macros.h
src/: CMakeLists.txt  main.cpp
src/core/: event_handler.cpp  event_handler.h  filesystem.cpp  filesystem.h  renderer.cpp  renderer.h  shader.cpp  shader.h  timing.cpp  timing.h  types.h  window.cpp  window.h
src/core/shaders/: shader_source.h
src/core/utils/assertions_internal/: assertions_off.h  assertions_on.h
src/dev_ui/: dev_ui.cpp  dev_ui.h
src/libs/dev_ui/: CMakeLists.txt
src/libs/dev_ui/embedded_font/: roboto_medium.h
src/libs/dev_ui/imgui_backends/: README.md
src/libs/dev_ui/include/dev_ui/: dev_ui.h
src/libs/dev_ui/src/: dev_ui.cpp
src/utils/: assertions.h  backports.h  helper_macros.h  singleton.h
src/utils/internal/: assertions_off.h  assertions_off.inl  assertions_on.h  assertions_on.inl
